@@ -7,7 +7,7 @@
 #               2007 Didier Briel, Zoltan Bartko, Martin Fleurke
 #               2008 Andrzej Sawula, Alex Buloichik, Didier Briel, Martin Fleurke
 #               2009 Didier Briel, Alex Buloichik, Martin Fleurke
-#               2010 Didier Briel
+#               2010 Didier Briel, Wildrich Fourie
 #               Home page: http://www.omegat.org/
 #               Support center: http://groups.yahoo.com/group/OmegaT/
 #
@@ -167,7 +167,8 @@ TF_MENU_EDIT_OVERWRITE_MACHITE_TRANSLATION=Replace with &Machine Translation
 TF_MENU_EDIT_SOURCE_INSERT=I&nsert Source
 
 TF_MENU_EDIT_SOURCE_OVERWRITE=Re&place with Source
-TF_MENU_EDIT_EXPORT_SELECTION=Export Selection
+TF_MENU_EDIT_EXPORT_SELECTION=E&xport Selection
+TF_MENU_EDIT_TAGPAINT=Insert Source &Tags
 
 TF_MENU_EDIT_COMPARE_1=Select Match #&1
 
@@ -1247,7 +1248,7 @@ GUI_DICTIONARY_INSTALLER_AVAILABLE=Available dictionaries:
 # switch case
 
 
-TF_EDIT_MENU_SWITCH_CASE=&Switch Case To
+TF_EDIT_MENU_SWITCH_CASE=S&witch Case To
 
 TF_EDIT_MENU_SWITCH_CASE_TO_LOWER=&Lower Case
 
